<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/head_title" />

    <ImageView
        android:layout_width="@dimen/y207"
        android:layout_height="@dimen/y158"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y42"
        android:src="@drawable/icon_forget_logo" />

    <RelativeLayout
        android:layout_width="@dimen/y656"
        android:layout_height="@dimen/y92"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y31" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/et_gray_bg" />

        <EditText
            android:id="@+id/et_old_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/input_oldpw"
            android:padding="@dimen/y21"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/tv_gray"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/y656"
        android:layout_height="@dimen/y92"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y31" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/et_gray_bg" />

        <EditText
            android:id="@+id/et_new_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/chanpw_inputpw"
            android:padding="@dimen/y21"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/tv_gray"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/y656"
        android:layout_height="@dimen/y92"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y31" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/et_gray_bg" />

        <EditText
            android:id="@+id/et_new_pw_agin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/register_inputpw_agin"
            android:padding="@dimen/y21"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/tv_gray"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/y656"
        android:layout_height="@dimen/y92"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y63" >

        <ImageView
            android:id="@+id/iv_change_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_rosered_bg_selector" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>